k8s/4-monitoring.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sma-cluster-kafka-exporter
  labels:
    strimzi.io/cluster: sma-cluster
    strimzi.io/kind: Kafka
    strimzi.io/name: sma-cluster-kafka-exporter
spec:
  selector:
    strimzi.io/cluster: sma-cluster
    strimzi.io/kind: Kafka
    strimzi.io/name: sma-cluster-kafka-exporter
  ports:
    - name: metrics
      protocol: TCP
      port: 9404
      targetPort: 9404
